# roguelike

./: CMakeLists.txt
cmake_modules/: Findfakemodule.cmake
examples/: ex1.cpp
neolib/inc/: neo.hpp
testlib/inc/: testapi.h
testlib/src/: testapi.cpp
